--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,54 +1,40 @@
-cmake_minimum_required(VERSION 3.13)
-project(cppSwarmLib VERSION 1.0 LANGUAGES CXX)
+# CMakeLists.txt for cppSwarmLib project
+cmake_minimum_required(VERSION 3.20)  # Requires CMake 3.20+ for proper C++20 support
+project(cppSwarmLib LANGUAGES CXX)    # Define project name and language
 
-# Настройка компилятора
-add_compile_options(
-    -Werror
-    -Wall
-    -Wextra
-    -Wpedantic
-    -Wcast-align
-    -Wcast-qual
-    -Wconversion
-    -Wctor-dtor-privacy
-    -Wenum-compare
-    -Wfloat-equal
-    -Wnon-virtual-dtor
-    -Wold-style-cast
-    -Woverloaded-virtual
-    -Wredundant-decls
-    -Wsign-conversion
-    -Wsign-promo
+# Set C++20 standard with required support
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)         # Disable compiler-specific extensions
+
+# Create interface library (header-only)
+add_library(cppSwarmLib INTERFACE)
+
+# Add public include directories for consumers
+target_include_directories(cppSwarmLib
+    INTERFACE
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>   # For build tree
+        $<INSTALL_INTERFACE:include>                     # For install tree
 )
 
-# Отключение расширений компилятора
-if(NOT CMAKE_CXX_EXTENSIONS)
-    set(CMAKE_CXX_EXTENSIONS OFF)
-endif()
-
-
-# Добавление исходных файлов
-set(SOURCES
-    src/Params.hpp
-    src/SwarmUnit.hpp
-    src/Swarm.hpp
-    src/Tasks/ITask.hpp
-    src/UnitComponent/IUnitComponent.hpp
-    src/UnitComponent/ITaskManagerC.hpp
-    src/UnitComponent/IExecutorC.hpp
-    src/UnitComponent/ICommunicationC.hpp
+# Install headers preserving directory structure
+install(
+    DIRECTORY 
+        ${CMAKE_CURRENT_SOURCE_DIR}/Tasks/
+        ${CMAKE_CURRENT_SOURCE_DIR}/UnitComponent/
+        ${CMAKE_CURRENT_SOURCE_DIR}/
+    DESTINATION 
+        include/cppSwarmLib
+    FILES_MATCHING
+        PATTERN "*.hpp"
+        PATTERN "CMakeLists.txt" EXCLUDE  # Exclude CMakeLists from installation
 )
 
-# Создание библиотеки
-add_library(cppSwarmLib STATIC ${SOURCES})
-target_link_libraries(cppSwarmLib PRIVATE src/Swarm.hpp)
-
-# Установка директории для заголовочных файлов
-target_include_directories(cppSwarmLib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
-
-# Установка стандарта C++
-set_target_properties(cppSwarmLib PROPERTIES
-    CXX_STANDARD 20 
-    CXX_STANDARD_REQUIRED YES
-    CXX_EXTENSIONS NO
+# Install the library target
+install(TARGETS cppSwarmLib
+    EXPORT cppSwarmLibTargets
+    LIBRARY DESTINATION lib
+    ARCHIVE DESTINATION lib
+    RUNTIME DESTINATION bin
+    INCLUDES DESTINATION include
 )
